--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "static-files-asgi"
-version = "1.2.0"
+version = "1.3.0"
 dependencies = [
     "pydantic",
     "pydantic-xml",
     "jinja2",
     "anyio",
+    "aiopath",
     "starlette",
 ]
 requires-python = ">=3.10"
